# auto_landing

./: .gitignore  CMakeLists.txt  README copy.md  README.md  auto_landing.md  ocean_experiment.sh  package.xml
.history/src/: landpad_det_20220905200503.cpp  landpad_det_20220906101532.cpp  landpad_det_20220906101551.cpp  landpad_det_20220906101619.cpp
config/: camera_param_gazebo_monocular.yaml
file/: xy_smallchange.txt
launch/: command  command_for_CUHKSZ_tracking  display_pad_car.launch  empty_world.launch  iris_px4.launch  launch_arco_det.launch  launch_mission.launch  launch_my_vrxworld copy.launch  launch_my_vrxworld.launch  launch_my_wind_motor_world.launch  launch_my_world.launch  launch_my_world_with_chess_board.launch  launch_ocean_mission.launch  launch_ocean_world.launch  launch_tracker.launch  launch_whole_landing_job.launch  pose_control copy.launch  pose_control.launch  world copy.launch  world.launch
launch/vrx/: edit_boat.launch  iris_px4_for_vrx.launch  launch_vrx.launch  ocean.launch
models/boat/: boat.sdf
models/boat copy/: boat.sdf
models/boat_gps/: boat_gps.sdf  model.config
models/boat_invisible/: boat.sdf.last_generated  boat_invisible.sdf  model.config
models/boat_vrx/: boat_vrx.sdf  display.launch  model.config  wamv_gazebo copy.urdf  wamv_gazebo.urdf  wamv_gazebo.urdf.xacro
models/boat_vrx/wamv_platform/: wamv_gazebo.xacro
models/boat_vrx/wamv_platform/base_description/: wamv_base.urdf.xacro
models/bouy/: bouy copy.sdf  bouy.sdf  model.config
models/cafe_table/: model.sdf
models/cafe_table/materials/scripts/: qr_code.material
models/chess_board/: chess_board.sdf  model.config
models/chess_board/materials/scripts/: logo_ground.material
models/cuhk_logo_ground/: logo_ground.sdf
models/cuhk_logo_ground/materials/scripts/: logo_ground.material
models/invisible_plate/: invisible_plate.sdf  model.config
models/my_landing_pad/: landing_pad.sdf
models/my_landing_pad/materials/scripts/: landing_pad.material
models/p450_monocular/: p450_monocular.sdf
models/pad_car/: model.config  pad_car.sdf
models/static_stick/: model.config  static_stick.sdf
models/wind_motor/: CMakeLists.txt  package.xml
models/wind_motor/config/: joint_names_wind_motor.yaml  wind_motor_control.yaml
models/wind_motor/launch/: wind_motor.launch  wind_motor_gazebo.launch
models/wind_motor/meshes_defect/: blade.STL  motor.STL
models/wind_motor/meshes_fine/: base.STL  blade.STL
models/wind_motor/urdf/: wind_motor.csv  wind_motor.urdf  wind_motor.xacro
models/wind_motor_t/: model.config  wind_motor.sdf
models/wind_motor_t/launch/: display.launch  wind_motor_control.launch  wind_motor_gazebo.launch
scripts/: README.md  ana.py  analysis.py  camera_calibration  detect_with_front_camera.py  get_pos.py  hello.py  kcf.py  kcftest.py  my_turtle.py  px4_controller.py  px4_controller_withcamera.py  simple.py  test.py  try.py  wind_motor_controller.py
scripts/analysis/: plot.py  plot_height.py  plot_tra.py  record_link.py
scripts/img_warp_and_stitch/: stitch_boat_img.py  stitch_stream.py  warpping_img.py
scripts/tools_for_control/: pad_car_controller.py  px4_controller.py  px4_controller_position.py  px4_controller_withcamera.py
scripts/tools_for_measurement/: drone_trajectory.py  measure_visual_wave.py  measure_visual_wave_tune.py  wave_compare.py
src/: create_marker.cpp  landpad_det copy 2.cpp  landpad_det copy.cpp  landpad_det.cpp  my_mission copy.cpp  my_mission.cpp  my_mission_basic.cpp  my_ocean_mission copy.cpp  my_ocean_mission.cpp  my_ocean_mission_36.cpp  my_ocean_mission_37.cpp  my_ocean_mission_38.cpp  test.cpp  test_for_marker copy.cpp  test_for_marker.cpp
src/lib/: mission_utils.h
worlds/: chess_board.world  command  landing_pad.world  my_vrx.world  my_vrx.world.xacro  ocean.world  ocean.world.xacro  ocean_buoys.world  ocean_buoys.world.xacro
